<resources>
    <string name="app_name">Pokemons</string>
    <string name="welcome">Welcome to our MORTAL arena! If you\'re not scared, please, come in!</string>
    <string name="your_name">Your Name</string>
    <string name="enter_arena">Let\'s fight!</string>
    <string name="name_error">That\'s no good.</string>
    <string name="database_error">Seem\'s like database has dropped.</string>
    <string name="choose_your_fighter">Choose your fighter!</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_character">This is your character</string>
    <string name="enter_to_mortal_arena">Enter to mortal arena</string>
    <string name="change_account">Change account data</string>
    <string name="vs">VS</string>
    <string name="attack">Attack</string>
</resources>