<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_main_color"
    tools:context=".presentation.welcome.InsertNameActivity"
    android:theme="@android:style/Theme.Black.NoTitleBar">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/welcome"
        android:textColor="@color/text_color_main"
        android:textScaleX="1.2"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners"
        android:paddingStart="25dp"
        android:hint="@string/your_name"
        android:textColorHint="#FFFDD0"
        android:textColor="@color/text_color_main"
        android:fontFamily="@font/pokemon_solid"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/enter_arena"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:backgroundTint="#EE2040"
       />

</androidx.constraintlayout.widget.ConstraintLayout>