<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroung_main_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/pikachu_loader"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/pikachu_happy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pokemon_solid"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/text_color_main"
            android:textScaleX="1.2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pikachu_loader"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/welcome"
        android:textColor="@color/text_color_main"
        android:textScaleX="1.2"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Hello, USER NAME" />

    <TextView
        android:id="@+id/choose_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/choose_your_fighter"
        android:textAlignment="center"
        android:textColor="@color/text_color_main"
        android:textScaleX="1.2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/insert_pokemon_button"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners_button"
        android:fontFamily="@font/pokemon_solid"
        tools:text="Continue with Pikachu"
        app:backgroundTint="#EE2040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>