<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_main_color"
    tools:context=".presentation.main_menu.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/your_character"
        android:textAlignment="center"
        android:textColor="@color/text_color_main"
        android:textScaleX="1.2"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/user_name_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        tools:text="Vasya,"
        android:textAlignment="center"
        android:textColor="@color/text_color_main"
        android:textScaleX="1.2"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemon_item_selected"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <ImageView
            android:id="@+id/pokemon_image_selected"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/pokemon_name_selected"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73"
            tools:text="Pokemon Name" />

        <TextView
            android:id="@+id/pokemon_health_selected"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.853"
            tools:text="Health: 180" />

        <TextView
            android:id="@+id/pokemon_attack_selected"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.853"
            tools:text="Attack: 180" />

        <TextView
            android:id="@+id/pokemon_defence_selected"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.854"
            tools:text="Defence: 180" />

        <TextView
            android:id="@+id/pokemon_special_attack_selected"
            android:layout_width="130dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.969"
            tools:text="Special Attack: 180" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/change_character_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/pokemon_solid"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="@string/change_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/enter_arena_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corners_button"
        android:fontFamily="@font/pokemon_solid"
        android:text="@string/enter_to_mortal_arena"
        app:backgroundTint="#EE2040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

</androidx.constraintlayout.widget.ConstraintLayout>